--- a/OS X/nibs/settings.xib
+++ b/OS X/nibs/settings.xib
@@ -510,7 +510,7 @@
 										<object class="NSTextFieldCell" key="NSCell" id="655812210">
 											<int key="NSCellFlags">-1804468671</int>
 											<int key="NSCellFlags2">138445824</int>
-											<string key="NSContents"/>
+											<string key="NSContents">Alt+Tab</string>
 											<reference key="NSSupport" ref="391880496"/>
 											<string key="NSPlaceholderString">Press a key comination</string>
 											<reference key="NSControlView" ref="691680336"/>
@@ -790,14 +790,6 @@
 						<reference key="destination" ref="284283852"/>
 					</object>
 					<int key="connectionID">72</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBActionConnection" key="connection">
-						<string key="label">hotkeyChanged:</string>
-						<reference key="source" ref="1001"/>
-						<reference key="destination" ref="691680336"/>
-					</object>
-					<int key="connectionID">83</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
